# zapperedgedirect

./: README.md  pyproject.toml
zapper_direct/: .env.template  __init__.py  __main__.py  requirements.txt  uploader.py
